Complete customer get verify code with telephone number function
